<resources>
    <string name="app_name">BudgetBuddy</string>
    <string name="budget">Budget</string>
    <string name="buddy">Buddy</string>
    <string name="budget_buddy_mascot_logo">Budget Buddy mascot logo</string>
    <string name="income_name">Income Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="name_of_account">Name of account</string>
    <string name="amount">Amount</string>
    <string name="bill_amount">Bill amount</string>
    <string name="date">Date</string>
    <string name="due_date">Due date</string>
    <string name="bill">Bill</string>
    <string name="name_of_bill">Name of bill</string>
    <string name="type">Type</string>
    <string name="type_of_bill">Type of bill</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_new_bill">Add new bill</string>
    <string name="calculate">Calculate</string>
    <string name="income">Income</string>
    <string name="settings">Settings</string>
    <string name="total_expenses">Total Expenses: $$$$</string>
    <string name="total_income">Total Income: $$$$</string>
    <string name="total_leftover">Total Leftover: $$$$</string>
    <string name="add_new_budget">add new budget</string>
    <string name="new_budget">New Budget:</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="frequency">Frequency</string>
    <string name="select_frequency">Select frequency</string>
    <string name="budget_type">Budget Type</string>
    <string name="_00_00">00.00%</string>
    <string name="add_bill">Add Bill</string>
    <string name="bill_type_percentiles">Bill Type Percentiles</string>
    <string name="add_budget">Add Budget</string>
    <string name="bill_paid_from">Bill paid from</string>
    <string name="name_of_income">Name of income</string>
    <string name="add_income">Add Income</string>
    <string name="_return">Return</string>
    <string name="todays_date">Today\'s Date</string>
    <string name="delete_button">Delete Button</string>
    <string name="delete_budget">Delete Budget</string>
    <string name="delete_all_budgets">Delete All Budgets</string>
    <string name="view_tutorial">View Tutorial</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="next_payday">Next Payday</string>
    <string name="money_left">Money Left</string>
    <string name="tutorial_images">Tutorial Images</string>
    <string name="back_arrow">back arrow</string>
    <string name="next_button">Next button</string>
    <string name="calculate_description">Calculates the money you have left after bills, showing your available spending balance before your next paycheck.</string>
    <string name="exit_tutorial">Exit Tutorial</string>
    <string name="savings">Savings</string>
    <string name="name_of_savings">Name of savings</string>
    <string name="goal_date">Goal Date</string>
    <string name="goal_date_text">Goal Date</string>
    <string name="saving_paid_from">Saving paid from</string>
    <string name="name">Name</string>
</resources>