<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="100dp"
    tools:context=".Calculate">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/black_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/calcNextPaydayEdit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:cursorVisible="false"
            android:dropDownHeight="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/date"
            android:inputType="none"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/nextPaydayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_payday"
            app:layout_constraintBottom_toTopOf="@+id/calcNextPaydayEdit"
            app:layout_constraintEnd_toEndOf="@+id/calcNextPaydayEdit"
            app:layout_constraintStart_toStartOf="@+id/calcNextPaydayEdit" />

        <TextView
            android:id="@+id/todaysDateText"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:gravity="bottom"
            android:paddingBottom="12dp"
            android:text="@string/todays_date"
            app:layout_constraintBottom_toBottomOf="@+id/calcNextPaydayEdit"
            app:layout_constraintEnd_toStartOf="@+id/calcNextPaydayEdit"
            app:layout_constraintTop_toTopOf="@+id/calcNextPaydayEdit" />

        <TextView
            android:id="@+id/todaysDateTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todays_date"
            app:layout_constraintBottom_toTopOf="@+id/todaysDateText"
            app:layout_constraintEnd_toEndOf="@+id/todaysDateText"
            app:layout_constraintStart_toStartOf="@+id/todaysDateText" />

        <EditText
            android:id="@+id/amountLeftEdit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/calcNextPaydayEdit"
            app:layout_constraintStart_toEndOf="@+id/calcNextPaydayEdit"
            app:layout_constraintTop_toBottomOf="@+id/nextPaydayText"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/amountLeftText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_left"
            app:layout_constraintBottom_toTopOf="@+id/amountLeftEdit"
            app:layout_constraintEnd_toEndOf="@+id/amountLeftEdit"
            app:layout_constraintStart_toStartOf="@+id/amountLeftEdit" />

        <Button
            android:id="@+id/calcCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="@+id/todaysDateText"
            app:layout_constraintStart_toStartOf="@+id/todaysDateText"
            app:layout_constraintTop_toBottomOf="@+id/todaysDateText" />

        <Button
            android:id="@+id/calcCalculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="@+id/amountLeftEdit"
            app:layout_constraintStart_toStartOf="@+id/amountLeftEdit"
            app:layout_constraintTop_toBottomOf="@+id/amountLeftEdit" />

        <TextView
            android:id="@+id/calculateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>